@@ -15,6 +15,8 @@
   of the MAF to correct in function kin for 
   ret="realized" and ret="realizedAB" (thanks to
   Yvonne Badke for this suggestion)    
+  
+* Fixed bug in crossVal when committing a TS  
 
 
 0.9-5
